# ClaudeJupy

./: .gitignore  .mcp.json  CLAUDE.md  MANIFEST.in  README.md  execute_notebook.py  pyproject.toml  requirements.md  requirements.txt  test_new_kernel.py
.claude/: TODOS.md  instructions.md  test.md
deploy/: build.sh  publish.sh  test_local.sh
old/: .kernel_info.json  claude_mcp_config.json  claude_mcp_config_template.json  kernel_daemon.py  mcp_jupyter_server.py  mcp_jupyter_server_fast.py  notebook_client.py
src/: __main__.py
src/ml_jupyter_mcp/: __init__.py  __version__.py  server.py
src/ml_jupyter_mcp/daemon/: __init__.py  client.py  kernel_daemon.py  kernel_daemon.py.old
src/ml_jupyter_mcp/environment/: __init__.py  detector.py  uv_manager.py
src/ml_jupyter_mcp/handlers/: __init__.py  error_handler.py  response.py
src/ml_jupyter_mcp/kernel/: __init__.py  manager.py
src/ml_jupyter_mcp/notebook/: __init__.py
src/ml_jupyter_mcp/setup/: TODO.md  __init__.py
src/ml_jupyter_mcp/tools/: __init__.py  debugging.py  environment.py  execution.py  guidance.py  kernel_setup.py  notebook.py
src/ml_jupyter_mcp/utils/: __init__.py  constants.py
test/: README.md  cleanup.sh  run_tests.sh  setup_test_env.sh
test/core_tests/: test_01_installation.py  test_02_initialization.py  test_03_execution.py  test_04_error_recovery.py
test/integration_tests/: test_claude_patterns.sh  test_guidance_system.sh  test_module_import_flow.sh
test/workflows/: test_complete_workflow.py  test_uv_package_mgmt.py
